tests/typing/fail/too_polymorphic1.t20
;; The type signature is too general.
(: f (-> 'a 'a))
(define (f x) 2)
